samples/_failures_safe/1761664778_4363fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3429e556.c: In function ‘main’:
./samples/SAFE/__tmp_3429e556.c:159:13: error: expected expression at end of input
  159 |             case
      |             ^~~~
./samples/SAFE/__tmp_3429e556.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3429e556.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3429e556.c:159:13: error: expected declaration or statement at end of input
